# e2x-course-service

./: .gitignore  README.md  pyproject.toml
e2x_course_service/: __about__.py  _data.py  app.py  course_manager.py  hub_api.py
e2x_course_service/handlers/: apihandlers.py  base.py  handlers.py
share/e2x_course_service/templates/: base.j2  index.j2  manage_course.j2
ui/: package-lock.json  package.json
ui/src/: api.js  handlers.js  index.js  modals.js  tables.js  templates.js  utils.js
ui/style/: main.css
